--- a/datalets/base-datalet/base-datalet.html
+++ b/datalets/base-datalet/base-datalet.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" type="text/css" href="./static/css/base-datalet.css"/>
     <link rel="stylesheet" type="text/css" href="./static/css/baloon.min.css">
 
+    <script type="text/javascript" src="../../bower_components/jsdatachecker/jsdatachecker.min.js"></script>
+    <script type="text/javascript" src="../../bower_components/papaparse/papaparse.min.js"></script>
+    <script type="text/javascript" src="../../bower_components/abdmob/x2js/xml2json.min.js"></script>
+    <script type="text/javascript" src="../lib/modules/file-parser-controllet/togeojson.js"></script>
+
     <div id="datalet_container">
         <div id="base_datalet_loader"></div>
     </div>
