--- a/creator.html
+++ b/creator.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
 
-        <link href="../COMPONENTS/datalets/base-datalet/static/css/all.min.css" rel="stylesheet">
-        <link href="../COMPONENTS/datalets/base-datalet/static/css/baloon.min.css" rel="stylesheet">
+        <link href="../deep-components/datalets/base-datalet/static/css/all.min.css" rel="stylesheet">
+        <link href="../deep-components/datalets/base-datalet/static/css/baloon.min.css" rel="stylesheet">
 
-        <link rel='shortcut icon' type='image/x-icon' href='../COMPONENTS/datalets/base-datalet/static/images/rtpalogo.png' />
+        <link rel='shortcut icon' type='image/x-icon' href='../deep-components/datalets/base-datalet/static/images/rtpalogo.png' />
 
-        <script src="../COMPONENTS/datalets/lib/vendors/webcomponents_polyfill_ff/webcomponents-hi-sd-ce.js"></script>
-        <script type="text/javascript" src="../COMPONENTS/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-        <script type="text/javascript" src="../DEEPCLIENT/js/jquery-2.1.0.min.js"></script>
-        <link rel="import" href="../COMPONENTS/controllets/data-sevc-controllet/demo-data-sevc-controllet.html">
+        <script src="../deep-components/datalets/lib/vendors/webcomponents_polyfill_ff/webcomponents-hi-sd-ce.js"></script>
+        <script type="text/javascript" src="../deep-components/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+        <script type="text/javascript" src="../deep-client/js/jquery-2.1.0.min.js"></script>
+        <link rel="import" href="../deep-components/controllets/data-sevc-controllet/demo-data-sevc-controllet.html">
 
         <script type="text/javascript" src="creator/datasets.js"></script>
         <script type="text/javascript" src="creator/creator.js"></script>
