--- a/creator.html
+++ b/creator.html
@@ -38,10 +38,10 @@
 
     <body>
 
-    <button class="outside" id="btn_share" data-balloon="" data-balloon-pos="down"><i class="fas fa-share-alt"></i></button>
+    <!-- <button class="outside" id="btn_share" data-balloon="" data-balloon-pos="down"><i class="fas fa-share-alt"></i></button> -->
     <button class="outside" id="btn_download" data-balloon="" data-balloon-pos="down"><i class="fas fa-download"></i></button>
     <button class="outside" id="btn_embed" data-balloon="" data-balloon-pos="down"><i class="fas fa-code"></i></button>
-    <button class="outside" id="btn_fullscreen" data-balloon="" data-balloon-pos="down"><i class="fas fa-expand"></i></button>
+    <!-- <button class="outside" id="btn_fullscreen" data-balloon="" data-balloon-pos="down"><i class="fas fa-expand"></i></button> -->
 
         <div id="download-modal" class="sm-modal">
             <div class="sm-modal-content">
