--- a/creator.html
+++ b/creator.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="../deep-client/js/jquery-2.1.0.min.js"></script>
         <link rel="import" href="../deep-components/controllets/data-sevc-controllet/demo-data-sevc-controllet.html">
 
-        <script type="text/javascript" src="creator/datasets.js"></script>
+        <!-- <script type="text/javascript" src="creator/datasets.js"></script> -->
         <script type="text/javascript" src="creator/creator.js"></script>
         <link href="creator/creator.css" rel="stylesheet">
 
@@ -39,9 +39,11 @@
     <body>
 
     <!-- <button class="outside" id="btn_share" data-balloon="" data-balloon-pos="down"><i class="fas fa-share-alt"></i></button> -->
+    <!-- <button class="outside" id="btn_download" data-balloon="" data-balloon-pos="down"><i class="fas fa-download"></i></button> -->
+    <button class="outside" id="btn_save_idra" data-balloon="" data-balloon-pos="down"><i class="fas fa-save"></i></button>
     <button class="outside" id="btn_download" data-balloon="" data-balloon-pos="down"><i class="fas fa-download"></i></button>
     <button class="outside" id="btn_embed" data-balloon="" data-balloon-pos="down"><i class="fas fa-code"></i></button>
-    <!-- <button class="outside" id="btn_fullscreen" data-balloon="" data-balloon-pos="down"><i class="fas fa-expand"></i></button> -->
+    <button class="outside" id="btn_fullscreen" data-balloon="" data-balloon-pos="down"><i class="fas fa-expand"></i></button>
 
         <div id="download-modal" class="sm-modal">
             <div class="sm-modal-content">
