--- a/controllets/select-data-controllet/demo/index.html
+++ b/controllets/select-data-controllet/demo/index.html
@@ -10,7 +10,7 @@
 
     <link rel="import" href="../../select-data-controllet/select-data-controllet.html" />
 
-    <script src="../../../locales/controllet_ln.js"></script>
+    <!-- <script src="../../../locales/controllet_ln.js"></script> -->
 </head>
 
 <body>
