--- a/creator.html
+++ b/creator.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="../deep-client/js/jquery-2.1.0.min.js"></script>
         <link rel="import" href="../deep-components/controllets/data-sevc-controllet/demo-data-sevc-controllet.html">
 
-        <!-- <script type="text/javascript" src="creator/datasets.js"></script> -->
+        <script type="text/javascript" src="locales/controllet_ln.js"></script>
         <script type="text/javascript" src="creator/creator.js"></script>
         <link href="creator/creator.css" rel="stylesheet">
 
