--- a/controllets/datalets-modifier-controllet/datalets-modifier-controllet.html
+++ b/controllets/datalets-modifier-controllet/datalets-modifier-controllet.html
@@ -1,7 +1,7 @@
 <script src="../shared_js/perfect-scrollbar/js/min/perfect-scrollbar.jquery.min.js"></script>
 <link rel="stylesheet" href="../shared_js/perfect-scrollbar/css/perfect-scrollbar.min.css">
 
-<script src="../../locales/controllet_ln.js"></script>
+<!-- <script src="../../locales/controllet_ln.js"></script> -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
