--- a/controllets/filters-controllet/demo/index.html
+++ b/controllets/filters-controllet/demo/index.html
@@ -7,7 +7,7 @@
 
     <link rel="import" href="../filters-controllet.html" />
 
-    <script src="../../../locales/controllet_ln.js"></script>
+    <!-- <script src="../../../locales/controllet_ln.js"></script> -->
 
     <script src="../../shared_js/perfect-scrollbar/js/min/perfect-scrollbar.jquery.min.js"></script>
     <link rel="stylesheet" href="../../shared_js/perfect-scrollbar/css/perfect-scrollbar.min.css">
