--- a/controllets/select-visualization-controllet/demo/index.html
+++ b/controllets/select-visualization-controllet/demo/index.html
@@ -8,7 +8,7 @@
     <script src="../../shared_js/perfect-scrollbar/js/min/perfect-scrollbar.jquery.min.js"></script>
     <link rel="stylesheet" href="../../shared_js/perfect-scrollbar/css/perfect-scrollbar.min.css">
 
-    <script src="../../../locales/controllet_ln.js"></script>
+    <!-- <script src="../../../locales/controllet_ln.js"></script> -->
 
     <script type="text/javascript" src="../../../alasql-utility/alasql.min.js"></script>
     <script type="text/javascript" src="../../../alasql-utility/alasql-utility.js"></script>
