--- a/controllets/splod-visualization-controllet/splod-visualization-controllet.html
+++ b/controllets/splod-visualization-controllet/splod-visualization-controllet.html
@@ -1,4 +1,4 @@
-<script src="../../locales/controllet_ln.js"></script>
+<!-- <script src="../../locales/controllet_ln.js"></script> -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
